--- a/election_analyzer(lab3).ipynb
+++ b/election_analyzer(lab3).ipynb
@@ -1273,11 +1273,7 @@
       "metadata": {
         "id": "p-AuBLaTUDU3",
         "colab_type": "code",
-        "outputId": "182c4fe7-76ef-4ff8-ccf7-2046899d8abe",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "map = folium.Map(location=[59.9677274, 30.2921836], zoom_start = 13.5)\n",
@@ -1291,20 +1287,7 @@
         "\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<_io.TextIOWrapper name='/content/mapBeg.html' mode='r' encoding='UTF-8'>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1378,11 +1361,7 @@
       "metadata": {
         "id": "TKQdSK8-SLFw",
         "colab_type": "code",
-        "outputId": "f8f33432-2015-4d4a-bd88-d5b5b997ccc5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 278
-        }
+        "colab": {}
       },
       "source": [
         "import folium\n",
@@ -1391,29 +1370,7 @@
         "from googlemaps import Client as GoogleMaps"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting googlemaps\n",
-            "  Downloading https://files.pythonhosted.org/packages/9b/33/b93685916130c07325645d06a765dae23f4655b7aeb79c8a96fe9f552e26/googlemaps-3.1.3-py3-none-any.whl\n",
-            "Requirement already satisfied: requests<3.0,>=2.20.0 in /usr/local/lib/python3.6/dist-packages (from googlemaps) (2.21.0)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->googlemaps) (3.0.4)\n",
-            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->googlemaps) (2.8)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->googlemaps) (2019.9.11)\n",
-            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->googlemaps) (1.24.3)\n",
-            "Installing collected packages: googlemaps\n",
-            "Successfully installed googlemaps-3.1.3\n",
-            "Requirement already satisfied: GoogleMaps in /usr/local/lib/python3.6/dist-packages (3.1.3)\n",
-            "Requirement already satisfied: requests<3.0,>=2.20.0 in /usr/local/lib/python3.6/dist-packages (from GoogleMaps) (2.21.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->GoogleMaps) (2019.9.11)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->GoogleMaps) (3.0.4)\n",
-            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->GoogleMaps) (2.8)\n",
-            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3.0,>=2.20.0->GoogleMaps) (1.24.3)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1437,11 +1394,7 @@
       "metadata": {
         "id": "ShaVELFKcw-c",
         "colab_type": "code",
-        "outputId": "d1c27de6-f8d4-45ff-f2b9-175eb249994a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 219
-        }
+        "colab": {}
       },
       "source": [
         "gmaps = GoogleMaps(api_key)\n",
@@ -1450,19 +1403,7 @@
         "print (lat, lng)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-54dbaf12fd8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgmaps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGoogleMaps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0maddress\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Constitution Ave NW & 10th St NW, Washington, DC'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlng\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress_to_latlng\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlng\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'api_key' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1525,11 +1466,7 @@
       "metadata": {
         "id": "NFSBLYfZfKj6",
         "colab_type": "code",
-        "outputId": "e433c15c-93c3-4dde-ce1f-a843220ea11e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "url = 'http://photon.komoot.de/api/?q='\n",
@@ -1541,15 +1478,7 @@
         "    print (data['features'][0]['geometry']['coordinates'])"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[30.316229, 59.938732]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
