--- a/blockchain.ipynb
+++ b/blockchain.ipynb
@@ -37,7 +37,7 @@
       "source": [
         "!pip install web3==4.2.1\n",
         "from web3 import Web3 \n",
-        "web3 = Web3(Web3.HTTPProvider(\"https://mainnet.infura.io/v3/711102761a1244b7a0d84349af09edef\"))"
+        "web3 = Web3(Web3.HTTPProvider(\"*API"))"
       ],
       "execution_count": 1,
       "outputs": [
