--- a/Copy_of_blockchain.ipynb
+++ b/Copy_of_blockchain.ipynb
@@ -336,13 +336,13 @@
               " 'gasPrice': 80525500000,\n",
               " 'hash': HexBytes('0xea1093d492a1dcb1bef708f771a99a96ff05dcab81ca76c31940300177fcf49f'),\n",
               " 'input': '0x',\n",
-              " 'nonce': 21,\n",
+              " 'nonce': 21,\n", #количество транзакций, которые были отправлены отправителем
               " 'r': HexBytes('0xa254fe085f721c2abe00a2cd244110bfc0df5f4f25461c85d8ab75ebac11eb10'),\n",
               " 's': HexBytes('0x30b7835ba481955b20193a703ebc5fdffeab081d63117199040cdf5a91c68765'),\n",
-              " 'to': '0xc083e9947Cf02b8FfC7D3090AE9AEA72DF98FD47',\n",
+              " 'to': '0xc083e9947Cf02b8FfC7D3090AE9AEA72DF98FD47',\n", #адрес получателя
               " 'transactionIndex': 0,\n",
-              " 'v': 28,\n",
-              " 'value': 100000000000000000000})"
+              " 'v': 28,\n", #v,r,s данные обозначения, используемые для создания подписи, которая идентифицирует отправителя транзакции.
+              " 'value': 100000000000000000000})" #количество Wei, которые будут переданы от отправителя к получателю.
             ]
           },
           "metadata": {
